--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "typical",
   "private": true,
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "devDependencies": {
+    "@types/node": "^16.7.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   }
